<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_album_detailed_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sapient.mymusic.AlbumDetailedView">

    <ImageView
        android:id="@+id/album_poster"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:foregroundGravity="center"
        android:src="@drawable/a1008"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/album_poster"
        android:background="@color/white_color"
        android:orientation="vertical">

        <TextView
            android:id="@+id/al_name"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/black_color"
            android:text="@string/dt_al_name"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/al_artist"
            android:layout_width="match_parent"
            android:gravity="left"
            android:paddingTop="10dp"
            android:layout_height="30dp"
            android:textColor="@color/black_color"
            android:text="@string/dt_al_artist"
            />

        <TextView
            android:id="@+id/al_rel_date"
            android:layout_width="match_parent"
            android:gravity="left"
            android:paddingTop="10dp"
            android:layout_height="30dp"
            android:textColor="@color/black_color"
            android:text="@string/dt_al_reldate"
            />

        <TextView
            android:id="@+id/al_producer"
            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_height="30dp"
            android:paddingTop="10dp"
            android:textColor="@color/black_color"
            android:text="@string/dt_al_producer"
            />

        <TextView
            android:id="@+id/al_awards"
            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_height="30dp"
            android:paddingTop="10dp"
            android:textColor="@color/black_color"
            android:text="@string/dt_al_awards"
            />

        <TextView
            android:id="@+id/al_geners"
            android:layout_width="wrap_content"
            android:gravity="left"
            android:layout_height="30dp"
            android:paddingTop="10dp"
            android:textColor="@color/black_color"
            android:text="@string/dt_al_geners"
            />

        <TextView
            android:id="@+id/al_songs"
            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_height="30dp"
            android:paddingTop="10dp"
            android:textColor="@color/black_color"
            android:text="@string/dt_al_songs"
            />

        <TextView
            android:id="@+id/al_ratings"
            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_height="50dp"
            android:paddingTop="20dp"
            android:textColor="@color/black_color"
            android:text="@string/dt_al_rate"
            />

    </LinearLayout>
</RelativeLayout>
