<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/log_first_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/black_color"
            android:textColorHint="#808080" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/log_last_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/black_color"
            android:textColorHint="#808080" />

        <EditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/log_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="@color/black_color"
            android:textColorHint="#808080" />

        <EditText
            android:id="@+id/mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/log_mobile"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="10dp"
            android:textColor="@color/black_color"
            android:textColorHint="#808080" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/log_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black_color"
            android:textColorHint="#808080" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/gender"
                android:textAppearance="?android:textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/gMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/str_male" />

                <RadioButton
                    android:id="@+id/gFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_female" />

            </RadioGroup>


        </LinearLayout>

        <Spinner
            android:id="@+id/age_spinner"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#C0C0C0"
            android:entries="@array/age_group"
            android:spinnerMode="dialog"

            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:gravity="start"
                android:text="@string/lang"
                android:textAppearance="?android:textAppearanceLarge" />

            <CheckBox
                android:id="@+id/ln_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:checked="true"
                android:text="@string/ln_english" />

            <CheckBox
                android:id="@+id/ln_hi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:checked="false"
                android:text="@string/ln_hindi" />

            <CheckBox
                android:id="@+id/ln_ta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/ln_tamil" />


        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_shape"
            android:text="@string/log_reg_btn"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black_color" />

        <!--<TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/errorView" />
    -->
    </LinearLayout>
</ScrollView>