<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="100dp"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/emailId"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:hint="@string/log_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_shape"
        android:paddingLeft="10dp"
        android:textColor="@color/black_color"
        android:textColorHint="#808080"


        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:hint="@string/log_password"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edit_text_shape"
        android:textColorHint="#808080"
        android:textColor="@color/black_color"
        />

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/log_signin"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black_color"
        android:background="@drawable/edit_text_shape"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="loginToMainPage"
        android:clickable="true"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/errorView"
        android:text="If you are new user please click below link"
        />
    <TextView
        android:text="@string/log_create_acc"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:autoLink="web"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/creaateAccount"

        android:clickable="true"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/errorView1"
        android:text="If you are new user please click below link"
        />
    <!--android:onClick="registerPage"-->


</LinearLayout>
